# Kaggle-Eedi-Mining-Misconceptions-in-Mathematics-Silver-Medal

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
code/: inference.ipynb  stage1_train_retriever.py  utils.py
competition/: README.md  loss_utils.py  stage2_train_reranker.py
examples/: mined_negatives_experiment.py
examples/configs/: quickstart.yaml  reproduce_competition.yaml
src/labelbank/: __init__.py  data.py  formatting.py  losses.py  metrics.py  mining.py  reranker.py  retriever.py  run.py  training.py
tests/: reference_impl.py  test_data.py  test_formatting.py  test_losses.py  test_metrics.py  test_mining.py  test_pooling.py  test_run.py
